--- a/pms-frontend/package.json
+++ b/pms-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@zxing/browser": "^0.1.5",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
