--- a/pms-backend/src/main/resources/application.properties
+++ b/pms-backend/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=d0a224cb89
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+server.port=8051
